assets/css/styles.css
/* ... */
@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.fadeIn {
  -webkit-animation: fadeIn 0.6s;
  animation: fadeIn 0.6s;
}

@-webkit-keyframes fadeOut {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

@keyframes fadeOut {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

.fadeOut {
  -webkit-animation: fadeOut 0.8s;
  animation: fadeOut 0.8s;
}
/* end of fade animation for image slider - magnific popup */

/*************************/
/*     02. Preloader     */
/*************************/
.spinner-wrapper {
  position: fixed;
  z-index: 999999;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: #fff;
}

.spinner {
  position: absolute;
  top: 50%; /* centers the loading animation vertically one the screen */
  left: 50%; /* centers the loading animation horizontally one the screen */
  width: 3.75rem;
  height: 1.25rem;
  margin: -0.625rem 0 0 -1.875rem; /* is width and height divided by two */
  text-align: center;
}

.spinner > div {
  display: inline-block;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #00bfd8;
  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
}

.spinner .bounce1 {
  -webkit-animation-delay: -0.32s;
  animation-delay: -0.32s;
}

.spinner .bounce2 {
  -webkit-animation-delay: -0.16s;
  animation-delay: -0.16s;
}

@-webkit-keyframes sk-bouncedelay {
  0%,
  80%,
  100% {
    -webkit-transform: scale(0);
  }
  40% {
    -webkit-transform: scale(1);
  }
}

@keyframes sk-bouncedelay {
  0%,
  80%,
  100% {
    -webkit-transform: scale(0);
    -ms-transform: scale(0);
    transform: scale(0);
  }
  40% {
    -webkit-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
  }
}

/**************************/
/*     03. Navigation     */
/**************************/
.navbar-custom {
  background-color: #fff;
  box-shadow: 0 0.0625rem 0.375rem 0 rgba(0, 0, 0, 0.1);
  font: 600 0.875rem/0.875rem 'Raleway', sans-serif;
  transition: all 0.2s;
}

.navbar-custom .navbar-brand.logo-image img {
  height: 2.5rem;
}

.navbar-custom .navbar-brand.logo-text {
  font: 600 2rem/1.5rem 'Raleway', sans-serif;
  color: #393939;
  text-decoration: none;
}

.navbar-custom .navbar-nav {
  margin-top: 0.75rem;
  margin-bottom: 0.5rem;
}

.navbar-custom .nav-item .nav-link {
  padding: 0.625rem 0.75rem 0.625rem 0.75rem;
  color: #393939;
  text-decoration: none;
  transition: all 0.2s ease;
}

.navbar-custom .nav-item .nav-link:hover,
.navbar-custom .nav-item .nav-link.active {
  color: #00bfd8;
}

/* Dropdown Menu */
.navbar-custom .dropdown:hover > .dropdown-menu {
  display: block; /* this makes the dropdown menu stay open while hovering it */
  min-width: auto;
  animation: fadeDropdown 0.2s; /* required for the fade animation */
}

@keyframes fadeDropdown {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.navbar-custom .dropdown-toggle:focus {
  /* removes dropdown outline on focus */
  outline: 0;
}

.navbar-custom .dropdown-menu {
  margin-top: 0;
  border: none;
  border-radius: 0.25rem;
  background-color: #fff;
}

.navbar-custom .dropdown-item {
  color: #393939;
  text-decoration: none;
}

.navbar-custom .dropdown-item:hover {
  background-color: #fff;
}

.navbar-custom .dropdown-item .item-text {
  font: 600 0.875rem/0.875rem 'Raleway', sans-serif;
}

.navbar-custom .dropdown-item:hover .item-text {
  color: #00bfd8;
}

.navbar-custom .dropdown-items-divide-hr {
  width: 100%;
  height: 1px;
  margin: 0.75rem auto 0.725rem auto;
  border: none;
  background-color: #c4d8dc;
  opacity: 0.2;
}
/* end of dropdown menu */

.navbar-custom .social-icons {
  display: none;
}

.navbar-custom .navbar-toggler {
  border: none;
  color: #393939;
  font-size: 2rem;
}

.navbar-custom
  button[aria-expanded='false']
  .navbar-toggler-awesome.fas.fa-times {
  display: none;
}

.navbar-custom
  button[aria-expanded='false']
  .navbar-toggler-awesome.fas.fa-bars {
  display: inline-block;
}

.navbar-custom
  button[aria-expanded='true']
  .navbar-toggler-awesome.fas.fa-bars {
  display: none;
}

.navbar-custom
  button[aria-expanded='true']
  .navbar-toggler-awesome.fas.fa-times {
  display: inline-block;
  margin-right: 0.125rem;
}

/* Cookie Popup */
#cookies-eu-banner {
  text-align: center;
  position: fixed;
  bottom: 0;
  width: 100%;
  background: white;
  z-index: 999;
  padding: 10px 50px;
  border: 1px solid black;
  margin-bottom: 2px;
}

#cookies-eu-banner > a,
button {
  margin: 0 5px;
}

/*********************/
/*    04. Header     */
/*********************/
.header {
  background-color: #fff;
}

.header .header-content {
  padding-top: 8rem;
  padding-bottom: 4rem;
  text-align: center;
}

.header .image-container {
  display: flex;
  align-items: center;
  padding: 0;
}

.image-container .img-fluid {
  width: 1000px;
}

.header .text-container {
  margin-bottom: 4rem;
}

.header h1 {
  margin-bottom: 1.125rem;
  font-size: 2.5rem;
  line-height: 3.125rem;
}

.header .p-large {
  margin-bottom: 1.875rem;
}

/*************************/
/*     05. Customers     */
/*************************/
.slider-1 {
  padding-top: 2.25rem;
  padding-bottom: 2.125rem;
  text-align: center;
  background-color: #dff7fb78;
}

.slider-1 h5 {
  margin-bottom: 0.75rem;
}

.slider-1 .slider-container {
  padding-top: 2.75rem;
  padding-bottom: 2.75rem;
  border-radius: 0.5rem;
  background-color: #f7fcfd;
}

.logos {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
}

/************************/
/*     06. Services     */
/************************/
#services .flex-container {
  display: flex;
  flex-wrap: wrap;
}

#services .alert {
  background-color: #dff7fb;
  border-color: #00bfd8;
  font-size: 1rem;
}

.cards-1 .card .list-unstyled {
  text-align: left;
}

.cards-1 .card .list-unstyled .fas {
  color: #00bfd8;
  line-height: 1.375rem;
  padding-right: 5px;
}
/* ... */

